@@ -1,3 +1,9 @@
+2007-01-16  Petr Salinger  <Petr.Salinger@seznam.cz>
+
+	* include/private/gcconfig.h: Handle amd64/x86-64 cpu under
+	 GNU/kFreeBSD.
+	* os_dep.c: Likewise.
+
 2007-01-15  Andreas Tobler  <a.tobler@schweiz.org>
 
 	* os_dep.c (defined(MPROTECT_VDB) && defined(DARWIN)): Adjust mail
